--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "allowJs": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "types": ["node"],
+    "lib": ["ES2020", "DOM"]
   },
   "include": ["src/**/*.ts", "src/types/*.d.ts"]
 }
